change file name home.php to index.php

--- a/Service.html
+++ b/Service.html
@@ -189,7 +189,7 @@
 
 <body>
     <div>
-        <a href="home.php" class="h">Back To Home</a>
+        <a href="index.php" class="h">Back To Home</a>
     </div>
     <div class="container">
         <h1>Let's Quizzzz</h1>
